--- a/homework-2-clean-blog-website-sass/pages/index.html
+++ b/homework-2-clean-blog-website-sass/pages/index.html
@@ -18,7 +18,67 @@
             <li class="navbar-menu-item"><a href="./contact.html" class="navbar-menu-item-link">Contact</a></li>
         </ul>
     </nav>
-
+    <header class="home-header" style="background-image: url('/homework-2-clean-blog-website-sass/assets/images/bg-index.jpg')">
+        <div class="overlay"></div>
+        <div class="home-header-group">
+            <h1 class="home-header-group-title">Clean Blog</h1>
+            <h3 class="home-header-group-subtitle">A Blog Theme by Start Bootstrap</h3>
+        </div>
+    </header>
+    <article class="home-post">
+        <a href="#" class="home-post-link">
+            <h2 class="home-post-link-title">Man must explore, and this is exploration at its greatest</h2>
+            <h3 class="home-post-link-subtitle">Problems look mighty small from 150 miles up</h3>
+        </a>
+        <p class="home-post-meta">
+            Posted by Start Bootstrap on January 31, 2020 ·<span class="reading-time" title="Estimated read time"> 4 mins  read </span>
+        </p>
+    </article>
+    <hr>
+    <article class="home-post">
+        <a href="#" class="home-post-link">
+            <h2 class="home-post-link-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2>
+            <h3 class="home-post-link-subtitle">Never in all their history have men been able truly to conceive of the world...</h3>
+        </a>
+        <p class="home-post-meta">
+            Posted by Start Bootstrap on January 31, 2020 ·<span class="reading-time" title="Estimated read time"> 4 mins  read </span>
+        </p>
+    </article>
+    <hr>
+    <article class="home-post">
+        <a href="#" class="home-post-link">
+            <h2 class="home-post-link-title">Science has not yet mastered prophecy</h2>
+            <h3 class="home-post-link-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
+        </a>
+        <p class="home-post-meta">
+            Posted by Start Bootstrap on January 30, 2020 ·<span class="reading-time" title="Estimated read time"> 4 mins  read </span>
+        </p>
+    </article>
+    <hr>
+    <article class="home-post">
+        <a href="#" class="home-post-link">
+            <h2 class="home-post-link-title">Failure is not an option</h2>
+            <h3 class="home-post-link-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
+        </a>
+        <p class="home-post-meta">
+            Posted by Start Bootstrap on January 29, 2020 ·<span class="reading-time" title="Estimated read time"> 4 mins  read </span>
+        </p>
+    </article>
+    <hr>
+    <article class="home-post">
+        <a href="#" class="home-post-link">
+            <h2 class="home-post-link-title">The dreams of yesterday are the hopes of today and the reality of tomorrow.</h2>
+            <h3 class="home-post-link-subtitle">Never in all their history have men been able truly to conceive of the world...</h3>
+        </a>
+        <p class="home-post-meta">
+            Posted by Start Bootstrap on January 28, 2020 ·<span class="reading-time" title="Estimated read time"> 4 mins  read </span>
+        </p>
+    </article>
+    <hr>
+    <div class="home-button">
+        <a class="home-button-link" href="posts.html">View All Posts <i class="fa-solid fa-arrow-right"></i></a>
+    </div>
+    <hr>
     <footer class="footer">
         <ul class="footer-list">
             <li class="footer-list-item"><a href=""><i class="fa-regular fa-envelope"></i></a></li>
