--- a/homework-2-clean-blog-website-sass/pages/about.html
+++ b/homework-2-clean-blog-website-sass/pages/about.html
@@ -18,7 +18,19 @@
             <li class="navbar-menu-item"><a href="./contact.html" class="navbar-menu-item-link">Contact</a></li>
         </ul>
     </nav>
-
+    <header class="header" style="background-image: url('/homework-2-clean-blog-website-sass/assets/images/bg-about.jpg')">
+        <div class="overlay"></div>
+        <div class="header-group">
+            <h1 class="header-group-title">About Me</h1>
+            <h3 class="header-group-subtitle">This is what I do.</h3>
+        </div>
+    </header>
+    <div class="container">
+        <p class="about-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+        <p class="about-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+        <p class="about-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+    </div>
+    <hr>
     <footer class="footer">
         <ul class="footer-list">
             <li class="footer-list-item"><a href=""><i class="fa-regular fa-envelope"></i></a></li>
