--- a/homework-2-clean-blog-website-sass/pages/contact.html
+++ b/homework-2-clean-blog-website-sass/pages/contact.html
@@ -18,7 +18,47 @@
             <li class="navbar-menu-item"><a href="./contact.html" class="navbar-menu-item-link">Contact</a></li>
         </ul>
     </nav>
-
+    <header class="header" style="background-image: url('/homework-2-clean-blog-website-sass/assets/images/bg-contact.jpg')">
+        <div class="overlay"></div>
+        <div class="header-group">
+            <h1 class="header-group-title">Contact Me</h1>
+            <h3 class="header-group-subtitle">Have questions? I have answers.</h3>
+        </div>
+    </header>
+    <div class="contact">
+        <div class="container">
+            <p class="contact-text">
+                Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!
+            </p>
+            <form class="contact-form" novalidate>
+                <div class="contact-form-group">
+                    <label class="contact-form-group-text">Name</label>
+                    <input class="contact-form-group-input" type="text" placeholder="Name" required data-validation-required-message="Please enter your name.">
+                    <p class="contact-form-group-message"></p>
+                </div>
+                <div class="contact-form-group">
+                    <label class="contact-form-group-text">Email Address</label>
+                    <input class="contact-form-group-input" type="email" placeholder="Email Address" required data-validation-required-message="Please enter your name.">
+                    <p class="contact-form-group-message"></p>
+                </div>
+                <div class="contact-form-group">
+                    <label class="contact-form-group-text">Phone</label>
+                    <input class="contact-form-group-input" type="text" placeholder="Phone" required data-validation-required-message="Please enter your name.">
+                    <p class="contact-form-group-message"></p>
+                </div>
+                <div class="contact-form-group">
+                    <label class="contact-form-group-text">Message</label>
+                    <textarea rows="5" class="contact-form-group-textarea" placeholder="Message" required="" data-validation-required-message="Please enter a message." aria-invalid="false"></textarea>
+                    <p class="contact-form-group-message"></p>
+                </div>
+                <br>
+                <div class="button" style="justify-content: flex-start;">
+                    <a class="button-link" href="posts.html">Send</a>
+                </div>
+            </form>
+        </div>
+    </div>
+    <hr>
     <footer class="footer">
         <ul class="footer-list">
             <li class="footer-list-item"><a href=""><i class="fa-regular fa-envelope"></i></a></li>
