all pages responsive design completed.

--- a/homework-2-clean-blog-website-sass/pages/about.html
+++ b/homework-2-clean-blog-website-sass/pages/about.html
@@ -8,7 +8,7 @@
     <title>About</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar container">
         <a class="navbar-logo" href="./index.html">Clean Blog</a>
         <button class="navbar-btn">Menu<i class="fa-solid fa-bars navbar-btn-icon"></i></button>
         <ul class="navbar-menu">
