--- a/homework-3-clean-blog-website-sass/pages/index.html
+++ b/homework-3-clean-blog-website-sass/pages/index.html
@@ -18,10 +18,11 @@
             <li class="navbar-menu-item"><a href="./contact.html" class="navbar-menu-item-link">Contact</a></li>
         </ul>
     </nav>
-    <header class="header" style="background-image: url('/homework-2-clean-blog-website-sass/assets/images/bg-post.jpg')">
+    <header class="header" style="background-image: url('/homework-3-clean-blog-website-sass/assets/images/bg-index.jpg')">
         <div class="overlay"></div>
         <div class="header-group">
-            <h1 class="header-group-title">Posts</h1>
+            <h1 class="header-group-title">Clean Blog</h1>
+            <h3 class="header-group-subtitle">A Blog Theme by Start Bootstrap</h3>
         </div>
     </header>
     <div class="container">
@@ -76,10 +77,11 @@
         </article>
         <hr>
         <div class="button">
-            <a class="button-link" href="posts.html">Older <i class="fa-solid fa-arrow-right"></i></a>
+            <a class="button-link" href="posts.html">View All Posts <i class="fa-solid fa-arrow-right"></i></a>
         </div>
     </div>
-
+    
+    <hr>
     <footer class="footer">
         <ul class="footer-list">
             <li class="footer-list-item"><a href=""><i class="fa-regular fa-envelope"></i></a></li>
